--- a/TP1/app/src/main/res/layout/resume.xml
+++ b/TP1/app/src/main/res/layout/resume.xml
@@ -6,18 +6,6 @@
     android:layout_height="match_parent"
     tools:context="br.com.darksite.tp1.Resume">
 
-    <Button
-        android:id="@+id/btnNouveau"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="13dp"
-        android:layout_marginEnd="13dp"
-        android:background="@color/colorAccent"
-        android:text="Nouveau sondage"
-        android:textColor="@android:color/background_light" />
-
     <TextView
         android:id="@+id/textView6"
         android:layout_width="match_parent"
@@ -128,5 +116,18 @@
         android:layout_marginTop="20dp"
         android:text="TextView"
         android:textStyle="bold|italic" />
+
+    <Button
+        android:id="@+id/btnNouveauSondage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="11dp"
+        android:layout_marginEnd="14dp"
+        android:background="@color/colorAccent"
+        android:onClick="click"
+        android:text="Nouveau Sondage"
+        android:textColor="@android:color/background_light" />
 
 </RelativeLayout>
